internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-direct-response.routes.yaml
- ignorePortInHostMatching: true
  maxDirectResponseBodySizeBytes: 1048576
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*.envoyproxy.io'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /inline:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  directResponse:
                    bodyFormat:
                      textFormatSource:
                        inlineBytes: T0s=
                    status: 200
                  match:
                    pathSeparatedPrefix: /inline
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: direct-response
                          namespace: default
                  name: httproute/default/direct-response/rule/0/match/0/*_envoyproxy_io
                  responseHeadersToAdd:
                  - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                    header:
                      key: Content-Type
                      value: text/plain
            /logo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  directResponse:
                    bodyFormat:
                      textFormatSource:
                        inlineBytes: iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkYPhfDwAChwGA60e6kgAAAABJRU5ErkJggg==
                    status: 502
                  match:
                    pathSeparatedPrefix: /logo
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: direct-response-binary
                          namespace: default
                  name: httproute/default/direct-response-binary/rule/0/match/0/*_envoyproxy_io
                  responseHeadersToAdd:
                  - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                    header:
                      key: Content-Type
                      value: image/png
            /max-size:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  directResponse:
                    bodyFormat:
                      textFormatSource:
                        inlineBytes: LS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0 [...]
                    status: 200
                  match:
                    pathSeparatedPrefix: /max-size
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: direct-response-max-size
                          namespace: default
                  name: httproute/default/direct-response-max-size/rule/0/match/0/*_envoyproxy_io
                  responseHeadersToAdd:
                  - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                    header:
                      key: Content-Type
                      value: text/plain
            /value-ref:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  directResponse:
                    bodyFormat:
                      textFormatSource:
                        inlineBytes: eyJlcnJvciI6ICJJbnRlcm5hbCBTZXJ2ZXIgRXJyb3IifQ==
                    status: 502
                  match:
                    pathSeparatedPrefix: /value-ref
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: direct-response
                          namespace: default
                  name: httproute/default/direct-response/rule/1/match/0/*_envoyproxy_io
                  responseHeadersToAdd:
                  - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                    header:
                      key: Content-Type
                      value: application/json
                  - header:
                      key: X-Add-Header
                      value: added-502
                  - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                    header:
                      key: X-Set-Header
                      value: set-502
            /value-ref-not-found:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  directResponse:
                    status: 500
                  match:
                    pathSeparatedPrefix: /value-ref-not-found
                  metadata:
                    filterMetadata:
                      envoy-gateway:
                        resources:
                        - kind: HTTPRoute
                          name: direct-response-with-value-not-found
                          namespace: default
                  name: httproute/default/direct-response-with-value-not-found/rule/0/match/0/*_envoyproxy_io
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /inline/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      directResponse:
                        bodyFormat:
                          textFormatSource:
                            inlineBytes: T0s=
                        status: 200
                      match:
                        pathSeparatedPrefix: /inline
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: direct-response
                              namespace: default
                      name: httproute/default/direct-response/rule/0/match/0/*_envoyproxy_io
                      responseHeadersToAdd:
                      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                        header:
                          key: Content-Type
                          value: text/plain
                /logo/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      directResponse:
                        bodyFormat:
                          textFormatSource:
                            inlineBytes: iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkYPhfDwAChwGA60e6kgAAAABJRU5ErkJggg==
                        status: 502
                      match:
                        pathSeparatedPrefix: /logo
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: direct-response-binary
                              namespace: default
                      name: httproute/default/direct-response-binary/rule/0/match/0/*_envoyproxy_io
                      responseHeadersToAdd:
                      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                        header:
                          key: Content-Type
                          value: image/png
                /max-size/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      directResponse:
                        bodyFormat:
                          textFormatSource:
                            inlineBytes: LS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0 [...]
                        status: 200
                      match:
                        pathSeparatedPrefix: /max-size
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: direct-response-max-size
                              namespace: default
                      name: httproute/default/direct-response-max-size/rule/0/match/0/*_envoyproxy_io
                      responseHeadersToAdd:
                      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                        header:
                          key: Content-Type
                          value: text/plain
                /value-ref-not-found/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      directResponse:
                        status: 500
                      match:
                        pathSeparatedPrefix: /value-ref-not-found
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: direct-response-with-value-not-found
                              namespace: default
                      name: httproute/default/direct-response-with-value-not-found/rule/0/match/0/*_envoyproxy_io
                /value-ref/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      directResponse:
                        bodyFormat:
                          textFormatSource:
                            inlineBytes: eyJlcnJvciI6ICJJbnRlcm5hbCBTZXJ2ZXIgRXJyb3IifQ==
                        status: 502
                      match:
                        pathSeparatedPrefix: /value-ref
                      metadata:
                        filterMetadata:
                          envoy-gateway:
                            resources:
                            - kind: HTTPRoute
                              name: direct-response
                              namespace: default
                      name: httproute/default/direct-response/rule/1/match/0/*_envoyproxy_io
                      responseHeadersToAdd:
                      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                        header:
                          key: Content-Type
                          value: application/json
                      - header:
                          key: X-Add-Header
                          value: added-502
                      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
                        header:
                          key: X-Set-Header
                          value: set-502
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*_envoyproxy_io
